# c-micrograd

./: CMakeLists.txt  notes.md
src/: CMakeLists.txt  dataset.c  dataset.h  grad_function.c  grad_function.h  layer.c  layer.h  main.c  math_util.c  math_util.h  mlp.c  mlp.h  neuron.c  neuron.h  variable.c  variable.h
src/bitmap/: bitmap.c  bitmap.h
src/data_structures/: list.c  list.h  set.c  set.h
